@@ -59,6 +59,9 @@
 
 - The stdlib constructor now performs the CPU/FPU compatibility test.
 
+- Introduced new constructor types and changed the overall priority
+  order.
+
 
 c.lib 1.189 (5.3.2005)
 
